Set overflow-wrap to fix large texts

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@
 
 .note-content {
     margin: 4px;
+    overflow-wrap: break-word;
 }
 
 #div-content .shared-title,
